<resources>
    <string name="app_name">Eclectics</string>
    <string name="welcome_to">Welcome to</string>
    <string name="setup_account">SETUP ACCOUNT</string>
    <string name="login">Login</string>
    <string name="login_capital">LOGIN</string>
    <string name="use_biometric">USE BIOMETRIC LOGIN</string>
    <string name="connect_and_start_your_shift_now">Connect and start your\nShift now</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="_254">+254</string>
    <string name="access_your_portal_quickly_and_safely">Access your portal quickly\nand safely</string>
    <string name="please_authenticate_your_biometrics_details">Please authenticate your biometrics details</string>
    <string name="touch_the_fingerprint_sensor">Touch the fingerprint sensor</string>
    <string name="setup_biometric_login">SET UP BIOMETRIC LOGIN</string>
    <string name="skip">Skip</string>
    <string name="hello_alex">Hello, Alex</string>
    <string name="last_logged_in_thursday_8_00am">Last logged in Thursday 8:00AM</string>
    <string name="confirm_pin_for_you_to_access_account">Confirm pin for you to\nAccess account</string>
    <string name="confirm_pin">Confirm pin</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="_continue">CONTINUE</string>
    <string name="added_to_database">Saved to database</string>
</resources>