<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.auth.BiometricLoginFragment">

    <ImageView
        android:id="@+id/ivBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:src="@drawable/ic_brandbook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivMan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:src="@drawable/ic_screen4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBrand"
        app:layout_constraintBottom_toTopOf="@+id/llLogin"/>

    <LinearLayout
        android:id="@+id/llLogin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_login"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMan">

        <TextView
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/access_your_portal_quickly_and_safely"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_authenticate_your_biometrics_details"/>
        <ImageView
            android:id="@+id/ivFingerPrint"
            android:clickable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fingerprint"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/touch_the_fingerprint_sensor"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSetUpBiometric"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/setup_biometric_login"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@color/blue"
            app:cornerRadius="20dp" />
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/btnSkip"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            app:cornerRadius="20dp"
            app:strokeColor="@color/blue"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>