<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.auth.PinLoginFragment"
    android:padding="25dp">

    <TextView
        android:id="@+id/tvConfirmPinTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/confirm_pin_for_you_to_access_account"
        android:paddingTop="20dp"
        android:textSize="20sp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiDigitOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmPinTitle"
        app:layout_constraintEnd_toStartOf="@+id/tiDigitTwo"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiDigitTwo"
        app:layout_constraintStart_toEndOf="@+id/tiDigitOne"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmPinTitle"
        app:layout_constraintEnd_toStartOf="@+id/tiDigitThree"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiDigitThree"
        app:layout_constraintStart_toEndOf="@+id/tiDigitTwo"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmPinTitle"
        app:layout_constraintEnd_toStartOf="@+id/tiDigitFour"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiDigitFour"
        app:layout_constraintStart_toEndOf="@+id/tiDigitThree"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmPinTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tvConfirmPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tiDigitOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/confirm_pin"
        android:padding="30dp"
        android:textSize="12sp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmPin"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_7"
        android:textSize="32sp"
        android:textColor="@color/gray_inactive"
        app:strokeColor="@color/gray_inactive"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:iconSize="24dp"
        app:iconGravity="textStart"
        android:padding="10dp"
        app:iconPadding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Button.Circle" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn8"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmPin"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_8"
        android:textSize="32sp"
        android:textColor="@color/gray_inactive"
        app:strokeColor="@color/gray_inactive"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:iconSize="24dp"
        app:iconGravity="textStart"
        android:padding="10dp"
        app:iconPadding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Button.Circle"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmPin"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_9"
        android:textSize="32sp"
        android:textColor="@color/gray_inactive"
        app:strokeColor="@color/gray_inactive"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:iconSize="24dp"
        app:iconGravity="textStart"
        android:padding="10dp"
        app:iconPadding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Button.Circle"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7"
        android:layout_marginTop="20dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_4"
        android:textSize="32sp"
        android:textColor="@color/gray_inactive"
        app:strokeColor="@color/gray_inactive"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:iconSize="24dp"
        app:iconGravity="textStart"
        android:padding="10dp"
        app:iconPadding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Button.Circle" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn5"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btn8"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/_5"
        android:textSize="32sp"
        android:textColor="@color/gray_inactive"
        app:strokeColor="@color/gray_inactive"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:iconSize="24dp"
        app:iconGravity="textStart"
        android:padding="10dp"
        app:iconPadding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Button.Circle"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btn9"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_6"
        android:layout_marginTop="20dp"
        android:textSize="32sp"
        android:textColor="@color/gray_inactive"
        app:strokeColor="@color/gray_inactive"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:iconSize="24dp"
        app:iconGravity="textStart"
        android:padding="10dp"
        app:iconPadding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Button.Circle"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4"
        android:layout_marginTop="20dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_1"
        android:textSize="32sp"
        android:textColor="@color/gray_inactive"
        app:strokeColor="@color/gray_inactive"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:iconSize="24dp"
        app:iconGravity="textStart"
        android:padding="10dp"
        app:iconPadding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Button.Circle" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn2"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/_2"
        android:textSize="32sp"
        android:textColor="@color/gray_inactive"
        app:strokeColor="@color/gray_inactive"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:iconSize="24dp"
        app:iconGravity="textStart"
        android:padding="10dp"
        app:iconPadding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Button.Circle"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btn6"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/_3"
        android:layout_marginTop="20dp"
        android:textSize="32sp"
        android:textColor="@color/gray_inactive"
        app:strokeColor="@color/gray_inactive"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:iconSize="24dp"
        app:iconGravity="textStart"
        android:padding="10dp"
        app:iconPadding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Button.Circle"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />
    <ImageView
        android:id="@+id/ivBiometricLogin"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_fingerprint"
        android:padding="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn0"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btn2"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/_0"
        android:textSize="32sp"
        android:textColor="@color/gray_inactive"
        app:strokeColor="@color/gray_inactive"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:iconSize="24dp"
        app:iconGravity="textStart"
        android:padding="10dp"
        app:iconPadding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Button.Circle"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDelete"
        app:layout_constraintTop_toBottomOf="@+id/btn3"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:icon="@drawable/ic_backspace"
        app:iconTint="@color/gray_inactive"
        android:layout_marginTop="20dp"
        android:textSize="32sp"
        android:textColor="@color/gray_inactive"
        app:strokeColor="@color/gray_inactive"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:iconSize="24dp"
        app:iconGravity="textStart"
        android:padding="10dp"
        app:iconPadding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Button.Circle"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="3dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/_continue"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="@color/blue"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>